# allolib_playground

./: .gitignore  .gitmodules  .travis.yaml  .travis.yml  CMakeLists.txt  USING.md  VSCode_Setup.md  distclean.sh  init.sh  readme.md  run.sh
MUS109IA-2022/: 01_SineEnv_visual.cpp  04_FMVib_visual.cpp  04_FMVib_visual_osc.cpp
MUS109IA-F2022/: 01_SineEnv_visual.cpp  05_Tremolo_LP_reverb_visual.cpp
cookbook/blob/: main.cpp
cookbook/distributed/: distributed_mesh.cpp  distributed_mesh2.cpp
cookbook/grapher/: README.md  TextEditor.cpp  flags.cmake  main.cpp
cookbook/one-line-of-c/: README.md  main.cpp
cookbook/pickable/: customPickable.cpp
cookbook/simulation/: flocking.cpp  gravityWell.cpp  levyFlight.cpp  particleSystem.cpp  waveEquation.cpp
cookbook/sonification/: modal_synth.cpp
cookbook/ui/: tabs.cpp
src/: template.cpp
tools/audio/: MTCParser.h  midi_time_code.cpp  multichannel_playback.cpp  readme_multichannel_playback.md  readme_spatial_sequencer.md  spatial_sequencer.cpp  sphere_audio_test.cpp
tools/graphics/: panels.cpp
tools/sphere/: calibration_pattern.cpp  stereotester.cpp
tutorials/allosphere/: 01_distributed_app.cpp  02_roles.cpp  03_parameters.cpp  04_state.cpp  05_files.cpp  06_distributed_synth.cpp  readme.md
tutorials/audiovisual/: 01_SineEnv_visual.cpp  02_OscEnv_visual.cpp  03_Vib_visual.cpp  04_FMVib_visual.cpp  04_FMVib_wavetable_visual.cpp  05_Tremolo_LP_visual.cpp  06_AM_object.cpp  06_AM_visual.cpp  07_AddSyn.cpp  07_AddSyn_visual.cpp  08_SubSyn_visual.cpp  09_pluck_visual.cpp  10_integrated.cpp  _instrument_classes.cpp  microphonePlay.cpp
tutorials/feedback/: 01_diffusion.cpp  02_reactiondiffustion.cpp
tutorials/feedback/shaders/: composite.frag  diffusion.frag  reactiondiffusion.frag  reactiondiffusion_colormap.frag  uv.vert
tutorials/gui/: 01_audio_gui.cpp  02_midi_gui.cpp
tutorials/interaction-sequencing/: 01_parameters.cpp  02_parameters_OSC.cpp  02b_parameters_OSC_send.cpp  03_presets.cpp  04_sequencer_system.cpp  05_polysynth.cpp  06_trigger.cpp  07_event_sequencer.cpp  08_event_recorder.cpp  09_bundles.cpp  10_distributedapp.cpp  11_audio_spatialization.cpp  11_audio_spatialization_scene.cpp  12_audio_spatialization_scene.cpp
tutorials/learn_digital_audio/: 01_Intro.cpp  02_BasicOsc.cpp  03_Waveshaping.cpp  04_Aliasing.cpp  04_Filter.cpp  05_Filter.cpp  05_Synthesizer.cpp  06_Delay.cpp  06_Synthesizer.cpp  07_Delay.cpp  07_ModulatedDelay.cpp  08_ModulatedDelay.cpp
tutorials/primer/: 01_app.cpp  02_app_configure.cpp  03_app_events.cpp
tutorials/raymarching/: 01_raymarching.cpp
tutorials/raymarching/shaders/: raymarch.frag  raymarch.vert
tutorials/synthesis/: 01_SineEnv.cpp  01_SineEnv_Piano.cpp  02_OscEnv.cpp  03_Vib.cpp  04_FM.cpp  04_FMVib.cpp  05_Tremolo_LP.cpp  06_AM.cpp  07_AddSyn.cpp  07_AddSyn_Waveform.cpp  08_SubSyn.cpp  10_Integrated.cpp  pl-pan.cpp
tutorials/vectorField/: 01_basic_points.cpp  02_texture.cpp  02a_newton.cpp  03_pbo.cpp  04_shader.cpp  04a_mandelbrot.cpp
